# thoughtleaders-cli

./: .gitignore  AGENTS.md  API.md  README.md  SERVER_CONTEXT_BRANDS.md  auth_flow_issues.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  cli-integration.yml  python-publish.yml
agents/: keyword-context-classifier.md  keyword-entity-resolver.md  keyword-relevance-validator.md  tl-analyst.md  youtube-comment-classifier.md
commands/: tl-brands.md  tl-channels.md  tl-sponsorships.md  tl.md
docs/: BLUEPRINT.md  E2E_WALKTHROUGH_G03.md  E2E_WALKTHROUGH_G09.md  SKILL_ARCHITECTURE.md  SKILL_STATUS_2026-04-29.md  SKILL_V1_VS_V2_PHASES_1_2_3.md  SKILL_VISUAL_ARCHITECTURE.md  architecture.md
hooks/: hooks.json
hooks/scripts/: load-tl-skill.mjs  pre-check.sh
skills/bulk-import/: SKILL.md
skills/channel-authenticity/: SKILL.md
skills/channel-authenticity/references/: case-studies.md  comment-patterns.md  peer-cohort.md  red-flags.md  scoring.md  tl-cli-recipes.md
skills/channel-authenticity/scripts/: _io_utf8.py  analyze_channel.py  anomaly_detector.py  comment_analyzer.py  comment_scraper.py  engagement_ratios.py  peer_cohort.py  report.py  resolve_channel.py  score.py  tl_cli.py  video_integrity.py  view_curves.py
skills/tl/: SKILL.md
skills/tl-channel-authenticity/: .gitignore  SKILL.md
skills/tl-channel-authenticity/references/: peer-cohort.md  red-flags.md  scoring.md
skills/tl-channel-authenticity/scripts/: _io_utf8.py  analyze_channel.py  anomaly_detector.py  comment_analyzer.py  engagement_ratios.py  peer_cohort.py  report.py  resolve_channel.py  tl_cli.py  video_integrity.py  view_curves.py
skills/tl-competitor-research/: SPEC.md
skills/tl-create-workflow/: SKILL.md
skills/tl-create-workflow/references/: creating-in-app.md  methodology.md  pitfalls.md  workflow-model.md
skills/tl-data/: SKILL.md
skills/tl-data/references/: elasticsearch-schema.md  firebolt-schema.md  postgres-schema.md
skills/tl-feedback/: SKILL.md
skills/tl-import/: SKILL.md
skills/tl-keyword-research/: SKILL.md
skills/tl-keyword-research/references/: context-classifier.md  elasticsearch-content-search.md  help.md
skills/tl-keyword-research/scripts/: build_report.py  expand_entities.py  fetch_context.py  probe.py  search_channels.py  search_videos.py  select_keywords.py
skills/tl-report-build/: SKILL.md
skills/tl-report-build/data/: sortable_columns.json  topics_v1.json
skills/tl-report-build/examples/: column_widget_rehearsal.md  e2e_rehearsal.md  filter_builder_rehearsal.md  golden_queries.md  judge_calibration.md  keyword_research_rehearsal.md  m9_shadow_mode_methodology.md  topic_matcher_rehearsal.md  validation_rehearsal.md
skills/tl-report-build/prompts/: _v1_system_prompt_REFERENCE.txt  column_widget_builder.md  filter_builder.md  judge.md  keyword_research.md  sample_judge.md  topic_matcher.md
skills/tl-report-builder/: SKILL.md
skills/tl-report-builder/examples/: e2e_findings.md  golden_queries.md
skills/tl-report-builder/references/: columns_brands.md  columns_channels.md  columns_content.md  columns_sponsorships.md  data_plane.md  intelligence_filterset_schema.json  intelligence_widget_schema.json  report_glossary.md  sponsorship_filterset_schema.json  sponsorship_schema.json  widgets.md
skills/tl-save-report/: SKILL.md
skills/tl-top-partnerships/: SKILL.md
skills/tl-views-guarantee/: SKILL.md
src/tl_cli/: __init__.py  _typer_utils.py  config.py  filters.py  hints.py  main.py  query_history.py  self_update.py  skill_registry.py
src/tl_cli/auth/: commands.py  (+3 more)
tests/: test_auth.py  test_brands.py  test_brands_winner_channels.py  test_build_report.py  test_channels.py  test_channels_lookalike.py  test_db_repeat_warning.py  test_describe.py  test_error_hints.py  test_expand_entities.py  test_filters.py  test_http_auth.py  test_output.py  test_probe.py  test_profiles.py  test_reports.py  test_scripts_executable.py  test_search_channels.py  test_search_videos.py  test_select_keywords.py  test_setup.py  test_setup_marker_respect.py  test_skill_registry.py  test_skills_command.py  test_sponsorships.py  test_workflows.py
tests_cli/: AGENTS.md  conftest.py  test_balance.py  test_db_es.py  test_db_fb.py  test_db_pg.py  test_schema.py  test_whoami.py
(+56 files in other folders)
