[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thoughtleaders-cli"
version = "0.6.14"
description = "ThoughtLeaders CLI — query sponsorship data, channels, brands, and intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "ThoughtLeaders", email = "dev@thoughtleaders.io"},
]
keywords = ["thoughtleaders", "sponsorship", "influencer", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    # `typer` >= 0.16 made click/rich/shellingham required — the `[all]` extra
    # was removed and uv warns about it. Drop the extra to silence the warning;
    # behaviour is identical because the bundled deps are pulled either way.
    "typer>=0.16",
    "rich>=13.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "authlib>=1.3",
    # `toon-format` only publishes pre-releases (0.9.0b1 is the only modern
    # release; 0.1.0 is the lone stable). pip/pipx accept `>=0.9.0b1` and pull
    # the beta, but uv refuses pre-releases under `>=` when a stable exists.
    # An exact pin is the one form uv will resolve without `--prerelease=allow`.
    "toon-format==0.9.0b1",
]

[project.scripts]
tl = "tl_cli.main:cli"

[project.urls]
Homepage = "https://thoughtleaders.io"
Repository = "https://github.com/ThoughtLeaders-io/thoughtleaders-cli"
Documentation = "https://github.com/ThoughtLeaders-io/thoughtleaders-cli/blob/main/docs/architecture.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tl_cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude-plugin" = "tl_cli/_plugin/.claude-plugin"
"commands" = "tl_cli/_plugin/commands"
"skills" = "tl_cli/_plugin/skills"
"agents" = "tl_cli/_plugin/agents"
"hooks" = "tl_cli/_plugin/hooks"

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
