[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thoughtleaders-cli"
version = "0.6.46"
description = "ThoughtLeaders CLI — query sponsorship data, channels, brands, and intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "ThoughtLeaders", email = "dev@thoughtleaders.io"},
]
keywords = ["thoughtleaders", "sponsorship", "influencer", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    # `typer` >= 0.16 made click/rich/shellingham required — the `[all]` extra
    # was removed and uv warns about it. Drop the extra to silence the warning;
    # behaviour is identical because the bundled deps are pulled either way.
    "typer>=0.16",
    "rich>=13.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "authlib>=1.3",
    # toon-codec (imports as `pytoon`) is the stable-released TOON encoder.
    # Replaces toon-format which only publishes pre-releases and made
    # `uv tool install` / `uv pip install` fail without --prerelease=allow.
    "toon-codec>=1.0.1",
    "pyyaml>=6.0",
]

[project.scripts]
tl = "tl_cli.main:cli"

[project.urls]
Homepage = "https://thoughtleaders.io"
Repository = "https://github.com/ThoughtLeaders-io/thoughtleaders-cli"
Documentation = "https://github.com/ThoughtLeaders-io/thoughtleaders-cli/blob/main/docs/architecture.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tl_cli"]

[tool.hatch.build.targets.wheel.force-include]
".claude-plugin" = "tl_cli/_plugin/.claude-plugin"
"skills" = "tl_cli/_plugin/skills"
"agents" = "tl_cli/_plugin/agents"
"hooks" = "tl_cli/_plugin/hooks"

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
